<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/info" />
    </group>

    <item android:title="@string/emotion">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_emotion"
                android:icon="@drawable/ic_baseline_insert_emoticon_24"
                android:title="@string/emotion" />
            </group>
        </menu>
    </item>


</menu>