<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_peekHeight="100dp"
    tools:context=".fragments.BottomSheet">

    <FrameLayout
        android:id="@+id/frame_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="15dp">

        <View
            android:id="@+id/line"
            android:layout_width="35dp"
            android:layout_height="4dp"
            android:layout_gravity="top|center"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_line" />

        <TextView
            android:id="@+id/filter_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="15dp"
            android:text="@string/filtration"
            android:textSize="@dimen/middleText" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filter_text"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="50dp"

            android:hint="@string/filter_name_hint"
            app:boxBackgroundColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/filter_text_set"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="25">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/filter_button"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/filter_list"
            android:background="@drawable/round_line"
            android:foreground="?android:attr/selectableItemBackground"
            android:theme="@android:style/ThemeOverlay.Material.Dark"
            android:src="@drawable/filter_list_24" />

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>