<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".fragments.ColorHabitFragment">
<Button
    android:id="@+id/setColorButton"
    android:layout_width="100dp"
    android:layout_height="60dp"
    android:text="@string/ok"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.9"/>

<View
    android:id="@+id/chosenColor"
    android:layout_width="200dp"
    android:layout_height="200dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintBottom_toTopOf="@id/setColorButton"
    app:layout_constraintTop_toTopOf="parent"
    android:background="@drawable/square"
    app:layout_constraintVertical_bias="0.4"
    android:translationZ="1dp"
    />


<TextView
    android:id="@+id/colorCodeText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toLeftOf="@id/colorCode"
    app:layout_constraintBottom_toTopOf="@id/chosenColor"
    app:layout_constraintHorizontal_bias="0.97"
    android:layout_marginBottom="5dp"
    android:text="@string/chosen_color"
    android:translationZ="1dp"
    />
<TextView
    android:id="@+id/colorCode"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="@id/chosenColor"
    app:layout_constraintBottom_toTopOf="@id/chosenColor"
    app:layout_constraintHorizontal_bias="1"
    android:layout_marginBottom="5dp"
    android:text="@string/rgb_code"
    android:translationZ="1dp"
    />


<HorizontalScrollView
    android:id="@+id/hsv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="horizontal"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0">

    <LinearLayout
        android:id="@+id/colorLinear"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/purple_200"
        android:orientation="horizontal"
        android:paddingStart="25dp">




    </LinearLayout>


</HorizontalScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>